test_regress/t/t_assert_consec_rep_unroll_limit_bad.out
%Error: t/t_assert_consec_rep_unroll_limit_bad.v:14:37: Concurrent assertion repetition count 25700000 exceeds --assert-unroll-limit (1024); raise '--assert-unroll-limit' to compile
                                                      : ... note: In instance 't'
   14 |   assert property (@(posedge clk) a [* 25700000] |-> b);
      |                                     ^~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: Exiting due to
